--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,14 @@ version: '3.4'
 services:
   web:
     build: .
+    ports:
+      - 80:8080
     volumes:
       - .:/usr/src/app
     command: npm start
     environment:
-      - NODE_ENV="development"
+      - NODE_ENV=development
+      - PORT=8080
   
   # Optional if test should be run in paralell when developing
   test:
@@ -17,4 +20,4 @@ services:
     volumes:
       - .:/usr/src/app
     environment:
-      - NODE_ENV="development"
+      - NODE_ENV=development
