--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - 80:8080
     volumes:
-      - .:/usr/src/app
+      - ./src:/usr/milou/app/src
+      - /usr/milou/app/node_modules
     command: npm start
     environment:
       - NODE_ENV=development
@@ -18,6 +19,7 @@ services:
       context: .
       target: test
     volumes:
-      - .:/usr/src/app
+      - .:/usr/milou/app/
+      - /usr/milou/app/node_modules
     environment:
       - NODE_ENV=development
